Updates of collections and index

--- a/collections/_form/checkbox.html
+++ b/collections/_form/checkbox.html
@@ -1,6 +1,7 @@
 ---
 title: Checkbox
 layout: layout-docs
+category: Form
 order: 2
 ---
 
@@ -65,7 +66,7 @@ order: 2
 </p>
 <p>
   For more information, see
-  <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/checkbox">MDN</a>.
+  <a href="https://developer.mozilla.org/en-US/components/Web/HTML/Element/input/checkbox">MDN</a>.
 </p>
 
 <h3>When to use</h3>
@@ -80,7 +81,7 @@ order: 2
 <ul>
   <li>Selection of 1 option from a predetermined list of items.</li>
   <ul>
-    <li>Using <a href="/docs/radio-buttons/">radio buttons</a> would be more appropriate.</li>
+    <li>Using <a href="/components/radio-buttons/">radio buttons</a> would be more appropriate.</li>
   </ul>
 </ul>
 
