--- a/collections/_form/text-area.html
+++ b/collections/_form/text-area.html
@@ -1,6 +1,7 @@
 ---
 title: Text Area
 layout: layout-docs
+category: Form
 order: 4
 ---
 
@@ -66,7 +67,7 @@ order: 4
   <ul>
     <li>We recommend that you break your questions up into a series of simpler questions instead.</li>
     <li>
-      For example, consider using the <a href="/docs/checkbox/">checkbox</a> component 
+      For example, consider using the <a href="/components/checkbox/">checkbox</a> component 
       if you want users to give multiple answers from a predetermined set of options.
     </li>
   </ul>
