--- a/collections/_form/text-input.html
+++ b/collections/_form/text-input.html
@@ -1,6 +1,7 @@
 ---
 title: Text Input
 layout: layout-docs
+category: Form
 order: 5
 ---
 
@@ -206,13 +207,13 @@ order: 5
 <ul>
   <li>When you require users to enter text and/or long answers that span multiple lines.</li>
     <ul>
-      <li>Using the <a href="/docs/text area/">text area</a> component would be more appropriate</li>
+      <li>Using the <a href="/components/text area/">text area</a> component would be more appropriate</li>
     </ul>
   <li>When you require users to select from a predetermined list.</li>
     <ul>
       <li>
-        Using the <code>&lt;select&gt;</code>, <a href="/docs/checkbox/">checkbox</a>
-         or <a href="/docs/radio-buttons/">radio buttons</a> components would be more appropriate.
+        Using the <code>&lt;select&gt;</code>, <a href="/components/checkbox/">checkbox</a>
+         or <a href="/components/radio-buttons/">radio buttons</a> components would be more appropriate.
         </li>
     </ul>
 </ul>
