--- a/collections/_general/callout.html
+++ b/collections/_general/callout.html
@@ -53,7 +53,7 @@ icon: callout
     </ul>
   <li>Important or critical information .</li>
     <ul>
-      <li>The <a href="/docs/notification">notification</a> component
+      <li>The <a href="/components/notification">notification</a> component
         with the correct color state.</li>
     </ul>
 </ul>
