--- a/collections/_general/card.html
+++ b/collections/_general/card.html
@@ -179,7 +179,7 @@ icon: card
 
 <h3>2) Grids, Headers, and Footers</h3>
 <p>
-  Cards can be used with <a href="/docs/grid">grids</a> - they can contain
+  Cards can be used with <a href="/components/grid">grids</a> - they can contain
   headers for titles or footers for interactions.
 </p>
 <div class="sgds-example-others">
@@ -323,8 +323,8 @@ icon: card
   </li>
   <li>
     Drawing users’ attention to important information - other options like
-    the <a href="/docs/notification">notification</a> component with
-    the correct colour state or the <a href="/docs/callout/">callout</a> component
+    the <a href="/components/notification">notification</a> component with
+    the correct colour state or the <a href="/components/callout/">callout</a> component
     are more suitable.
   </li>
 </ul>
