--- a/collections/_general/dropdown.html
+++ b/collections/_general/dropdown.html
@@ -120,8 +120,8 @@ js: true
   <li>When requiring users to select from a predetermined list of answers.</li>
     <ul>
       <li>Better alternatives would be the
-        <a href="/docs/checkbox/">checkbox</a> or
-        <a href="/docs/radio-buttons/">radios</a> component.</li>
+        <a href="/components/checkbox/">checkbox</a> or
+        <a href="/components/radio-buttons/">radios</a> component.</li>
     </ul>
   <li>for including checkboxes as users may not know how to
     select multiple options presented to them in a dropdown.</li>
