--- a/collections/_general/modal.html
+++ b/collections/_general/modal.html
@@ -173,7 +173,7 @@ category: General
         such as confirming or filling in a form.
         If you need to notifiy the user or something important,
         use something less intrusive such as
-        the <a href="/docs/notification">notification</a> component instead.
+        the <a href="/components/notification">notification</a> component instead.
     </li>
 </ul>
 
