--- a/collections/_general/pagination.html
+++ b/collections/_general/pagination.html
@@ -203,8 +203,8 @@ icon: table
     <li>Replacing Navigation.</li>
     <ul>
       <li>For main navigation, you are advised to use the 
-          <a href="/docs/main-nav/">main nav</a> and 
-          <a href="/docs/side-nav/">side nav</a> components.</li>
+          <a href="/components/main-nav/">main nav</a> and 
+          <a href="/components/side-nav/">side nav</a> components.</li>
     </ul>
 </ul>
 
