--- a/collections/_general/tab.html
+++ b/collections/_general/tab.html
@@ -279,7 +279,7 @@ js: true
     </ul>
     <li>Making comparisons or presenting tabular data.</li>
     <ul>
-      <li>Using the <a href="/docs/table/">table</a> component may be more appropriate.</li>
+      <li>Using the <a href="/components/table/">table</a> component may be more appropriate.</li>
     </ul>
 </ul>
 
