--- a/collections/_general/tag.html
+++ b/collections/_general/tag.html
@@ -247,7 +247,7 @@ js: false
         </tr>
         <tr>
             <td>is-*color*</td>
-            <td>Set tag colour. See above, or <a href="/docs/colours/">colour helper classes</a>.</td>
+            <td>Set tag colour. See above, or <a href="/components/colours/">colour helper classes</a>.</td>
         </tr>
         <tr>
             <td>is-small<br />is-medium</td>
