--- a/collections/_get-started/customise-sgds.html
+++ b/collections/_get-started/customise-sgds.html
@@ -1,7 +1,7 @@
 ---
 title: Customise SGDS with Sass
 layout: layout-sidenav
-permalink: /docs/customise-sgds/
+category: developers
 ---
 
 <h2>Overview</h2>
@@ -32,7 +32,7 @@ site-folder/
 
 <h4>If you manually downloaded SGDS</h4>
 <p>
-	If you've manually <a href="/docs/getting-started">downloaded</a> the Sass files and are not
+	If you've manually <a href="/components/getting-started">downloaded</a> the Sass files and are not
 	using a package manager, you can set up your code with the following folder structure:
 </p>
 
@@ -168,7 +168,7 @@ node_modules/
 				</div>
 			</td>
 			<td width="30%">
-				<a href="/docs/{{ variable_name[1].type }}">{{
+				<a href="/components/{{ variable_name[1].type }}">{{
           variable_name[1].type | capitalize
         }}</a>
 			</td>
