--- a/collections/_helpers/colours.html
+++ b/collections/_helpers/colours.html
@@ -88,11 +88,11 @@ coloursList:
 <p>Use the <code>is-*color*</code> class to set the component colours for:</p>
 
 <ul>
-    <li><a href="/docs/accordion/">Accordion</a></li>
-    <li><a href="/docs/button/">Button</a></li>
-    <li><a href="/docs/card/">Card</a></li>
-    <li><a href="/docs/notification/">Notification</a></li>
-    <li><a href="/docs/progress-bar/">Progress Bar</a></li>
+    <li><a href="/components/accordion/">Accordion</a></li>
+    <li><a href="/components/button/">Button</a></li>
+    <li><a href="/components/card/">Card</a></li>
+    <li><a href="/components/notification/">Notification</a></li>
+    <li><a href="/components/progress-bar/">Progress Bar</a></li>
 </ul>
 
 <p>Example of <code>is-*color*</code> classes for the <a href="/doc/button/">Button</a> component:</p>
