--- a/collections/_standard/masthead.html
+++ b/collections/_standard/masthead.html
@@ -75,7 +75,7 @@ order: 1
                 text.
                 However, it should still be accessible in the navigation panel. For example, include the
                 language selector in the
-                <a href="/docs/main-nav/">main navigation</a> and display it only on mobile views.</small>
+                <a href="/components/main-nav/">main navigation</a> and display it only on mobile views.</small>
         </div>
     </div>
 </div>
