--- a/collections/_form/radio-buttons.html
+++ b/collections/_form/radio-buttons.html
@@ -1,6 +1,7 @@
 ---
 title: Radio Buttons
 layout: layout-docs
+category: Form
 order: 3
 ---
 
@@ -129,7 +130,7 @@ order: 3
   <li>If you want users to select multiple options.</li>
   <ul>
     <li>
-      Using the <a href="/docs/checkbox">checkbox</a>
+      Using the <a href="/components/checkbox">checkbox</a>
       component would be more appropriate.
     </li>
   </ul>
