--- a/collections/_utilities/grid.html
+++ b/collections/_utilities/grid.html
@@ -1,8 +1,7 @@
 ---
-title: Grid
+title: Grid System
 layout: layout-docs
-category: layouts
-icon: grid
+category : layouts
 ---
 {% capture default_grid_example %}
 <section class="sgds-section">
