--- a/collections/_utilities/typography.html
+++ b/collections/_utilities/typography.html
@@ -1,9 +1,7 @@
 ---
 title: Typography
 layout: layout-docs
-category: General
-icon: typography
-order: 1 # For some reason mobile-nav sorts this page to first naturally. Override.
+category : ""
 ---
 
 <h2>Overview</h2>
