update links, clean up unused files

--- a/collections/_general/card.html
+++ b/collections/_general/card.html
@@ -179,7 +179,7 @@ icon: card
 
 <h3>2) Grids, Headers, and Footers</h3>
 <p>
-  Cards can be used with <a href="/components/grid">grids</a> - they can contain
+  Cards can be used with <a href="/utilities/grid/">grids</a> - they can contain
   headers for titles or footers for interactions.
 </p>
 <div class="sgds-example-others">
